--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "aos": "2.3.1",
     "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
