--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.14.2",
     "add": "^2.0.6",
     "aos": "2.3.1",
+    "axios": "^1.6.2",
     "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -21,6 +23,7 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
