--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
